--- a/members/static/css/chat.css
+++ b/members/static/css/chat.css
@@ -1,8 +1,20 @@
 #chat-log {
     position: relative;
     top: 90px;
-    padding-right: 170px;
+    left: 70px;
     resize: none;
+    padding-left: 2px;
+}
+
+#name_date {
+    position: absolute;
+    top: 90px;
+    left: 514px;
+    width: 138px;
+    height: 682px;
+    resize: none;
+    font-size: 13px;
+    line-height: 29px;
 }
 
 #chat-message-input {
@@ -20,10 +32,16 @@
 
 textarea {
     outline: none;
-    overflow: auto;
-    width: 718px;
+    overflow: hidden;
+    width: 745px;
     height: 682px;
     font-size: 160%;
+}
+
+.box {
+    position: absolute;
+    top: 50px;
+    left: 50px;
 }
 
 input {
